# cw-clock-example

./: Cargo.toml  README.md  justfile
artifacts/: checksums.txt
src/: contract.rs  state.rs
