[package]
name = "cadence-example"
version = "0.2.0"
authors = ["Reece W <reecepbcups@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "3.0.2" }
cosmwasm-schema = "3.0.2"
cw-storage-plus = "3.0.1"
cw2 =  "3.0.0"
thiserror = { version = "2.0.16" }

[dev-dependencies]
cw-multi-test = "3.0.1"
